--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,6 +14,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Start test.sh
+    - name: Install dependencies
       run: |
-        bash test.sh
+        python -m pip install --upgrade pip
+        pip install pylint && pip install -r requirements.txt
+    - name: Analyse the code with pylint
+      run: |
+        pylint --rcfile=.pylintrc $(git ls-files '*.py')
